<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgEmptyData"
        style="@style/EmptyDataImage"
        android:contentDescription="@string/image_search_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/tvTitleEmptyData"
        style="@style/TextTitleEmpty"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/imgEmptyData"
        app:layout_constraintStart_toStartOf="@+id/imgEmptyData"
        app:layout_constraintTop_toBottomOf="@+id/imgEmptyData"
        tools:text="@string/title_empty_data" />

    <TextView
        android:id="@+id/tvSubTitleEmptyData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleEmptyData"
        tools:text="@string/subtitle_empty_data" />

</androidx.constraintlayout.widget.ConstraintLayout>