<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsedToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin">

                <io.github.florent37.shapeofview.shapes.CircleView
                    android:id="@+id/imgCircle"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shape_circle_borderColor="#DFDFDF"
                    app:shape_circle_borderWidth="2dp">

                    <ImageView
                        android:id="@+id/imgDetailUser"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/image_user"
                        tools:src="@tools:sample/avatars" />

                </io.github.florent37.shapeofview.shapes.CircleView>

                <TextView
                    android:id="@+id/tvDetailName"
                    style="@style/TextContent.DetailName"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvDetailUsername"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imgCircle"
                    app:layout_constraintTop_toTopOf="@+id/imgCircle"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/name" />

                <TextView
                    android:id="@+id/tvDetailUsername"
                    style="@style/TextContent.DetailUsername"
                    app:layout_constraintBottom_toBottomOf="@+id/imgCircle"
                    app:layout_constraintEnd_toEndOf="@+id/tvDetailName"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/tvDetailName"
                    app:layout_constraintTop_toBottomOf="@+id/tvDetailName"
                    tools:text="@string/username" />

                <TextView
                    android:id="@+id/tvCountRepository"
                    style="@style/TextInfo.Count"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="@+id/tvRepository"
                    app:layout_constraintStart_toStartOf="@+id/tvRepository"
                    app:layout_constraintTop_toBottomOf="@+id/imgCircle"
                    tools:text="@string/count" />

                <TextView
                    android:id="@+id/tvRepository"
                    style="@style/TextInfo.Info"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/repository_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCountRepository" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:background="#DFDFDF"
                    app:layout_constraintBottom_toBottomOf="@+id/tvRepository"
                    app:layout_constraintEnd_toStartOf="@+id/tvFollowers"
                    app:layout_constraintStart_toEndOf="@+id/tvRepository"
                    app:layout_constraintTop_toTopOf="@+id/tvCountRepository" />

                <TextView
                    android:id="@+id/tvCountFollowers"
                    style="@style/TextInfo.Count"
                    app:layout_constraintEnd_toEndOf="@+id/tvFollowers"
                    app:layout_constraintStart_toStartOf="@+id/tvFollowers"
                    app:layout_constraintTop_toTopOf="@+id/tvCountRepository"
                    tools:text="@string/count" />

                <TextView
                    android:id="@+id/tvFollowers"
                    style="@style/TextInfo.Info"
                    android:text="@string/followers_info"
                    app:layout_constraintBottom_toBottomOf="@+id/tvRepository"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvRepository" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:background="#DFDFDF"
                    app:layout_constraintBottom_toBottomOf="@+id/tvFollowers"
                    app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
                    app:layout_constraintStart_toEndOf="@+id/tvFollowers"
                    app:layout_constraintTop_toTopOf="@+id/tvCountFollowers" />

                <TextView
                    android:id="@+id/tvCountFollowing"
                    style="@style/TextInfo.Count"
                    app:layout_constraintEnd_toEndOf="@+id/tvFollowing"
                    app:layout_constraintStart_toStartOf="@+id/tvFollowing"
                    app:layout_constraintTop_toTopOf="@+id/tvCountFollowers"
                    tools:text="@string/count" />

                <TextView
                    android:id="@+id/tvFollowing"
                    style="@style/TextInfo.Info"
                    android:layout_marginEnd="24dp"
                    android:text="@string/following_info"
                    app:layout_constraintBottom_toBottomOf="@+id/tvFollowers"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvFollowers" />

                <View
                    android:id="@+id/viewHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:background="#DFDFDF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvRepository" />

                <ImageView
                    android:id="@+id/imgLocation"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/image_location"
                    android:src="@drawable/ic_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewHorizontal" />

                <TextView
                    android:id="@+id/tvDetailLocation"
                    style="@style/TextContent.Detail"
                    app:layout_constraintBottom_toBottomOf="@+id/imgLocation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgLocation"
                    app:layout_constraintTop_toTopOf="@+id/imgLocation"
                    tools:text="@string/location" />

                <ImageView
                    android:id="@+id/imgCompany"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/image_company"
                    android:src="@drawable/ic_company"
                    app:layout_constraintStart_toStartOf="@+id/imgLocation"
                    app:layout_constraintTop_toBottomOf="@+id/imgLocation" />

                <TextView
                    android:id="@+id/tvDetailCompany"
                    style="@style/TextContent.Detail"
                    app:layout_constraintBottom_toBottomOf="@+id/imgCompany"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgCompany"
                    app:layout_constraintTop_toTopOf="@+id/imgCompany"
                    tools:text="@string/company" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            style="@style/AppTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabTextAppearance="@style/AppTabTextAppearance" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/add_user"
        android:focusable="true"
        android:foregroundGravity="bottom"
        android:src="@drawable/ic_favorite_unselected"
        app:fabSize="normal"
        app:layout_anchor="@id/constraintScroll"
        app:layout_anchorGravity="bottom|end|right" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>